--- a/style.css
+++ b/style.css
@@ -7,6 +7,23 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+.wrapper {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+}
+
 .top__section {
   background-color: #941727;
   opacity: 0.8;
@@ -189,6 +206,8 @@ body {
 .bottom {
   min-height: 100px;
   background-color: #771825;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .bottom_contacts {
@@ -347,6 +366,35 @@ body {
   }
   .bottom_copy {
     padding: 3vh 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .top .logo {
+    padding-right: 0;
+  }
+  .advantages {
+    padding: 10vh 7vw 5vh;
+  }
+  .advantages__item {
+    width: 70vw;
+  }
+  .advantages__text {
+    padding: 3vw;
+  }
+  .services__img-programmer {
+    height: 60vw;
+    width: 60vw;
+  }
+  .bottom {
+    width: 100vw;
+  }
+  .bottom_contacts {
+    padding: 7vh 6vw 0;
+  }
+  .bottom_cat {
+    height: auto;
+    width: 80vw;
   }
 }
 /*# sourceMappingURL=style.css.map */
