--- a/style.scss
+++ b/style.scss
@@ -24,9 +24,9 @@ body {
     &__section {
         background-color: #E96C7C - #555555;
         opacity: 0.8;
-        max-height: 70px;
+        height: 70px;
         display: flex;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
         position: fixed;
         z-index: 1;
@@ -34,8 +34,8 @@ body {
     }
 
     .logo {
-        height: 150px;
-        padding-right: 50px;
+        height: 56px;
+        padding: 7px 9vw 7px 17vw;
     }
 }
 
@@ -43,6 +43,7 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding-right: 5vw;
 
     &__checkbox {
         display: none;
