--- a/style.scss
+++ b/style.scss
@@ -152,7 +152,7 @@ body {
 
 
     &__item {
-        min-height: 40vh;
+        min-height: 35vh;
         width: 260px;
         border: 1px solid #36384F + #888888;
         border-radius: 10px;
@@ -311,13 +311,13 @@ body {
         }
 
         &__item {
-            width: 40vw;
+            width: 65vw;
             margin-bottom: 5vh;
         }
 
         &__img {
             // max-height: 37vh;
-            max-width: 30vw;
+            max-width: 60vw;
         }
     }
 
@@ -373,6 +373,18 @@ body {
         &_cat {
             height: auto;
             width: 80vw;
+        }
+    }
+}
+
+@media (max-width: 639px) {
+    #carouselExampleIndicators {
+        margin-top: 59px;
+    }
+
+    .advantages {
+        &__item {
+            min-height: 30vh;
         }
     }
 }
