next next next change

--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ body {
 
 .advantages__item {
   min-height: 35vh;
-  width: 260px;
+  min-width: 260px;
   border: 1px solid #bec0d7;
   border-radius: 10px;
   display: -webkit-box;
